X.Org Bug #10992: xlogin crashes if window size is too small

X.Org Bugzilla #10992 <https://bugs.freedesktop.org/show_bug.cgi?id=10992>